# simple_database

./: .mydb.db.swp  CMakeLists.txt  LICENSE  README.md  db  main.c  makefile  mydb.db  test.cpp  test.db  test.rb
src/: buffer.c  cursor.c  defs.h  node.c  pager.c  statement.c  table.c  types.c  types.h
test/: CMakeLists.txt  test.cpp
